force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/T_qtc_Invoice_Active_OSA__c.object-meta.xml
<CustomObject>
    <label>T_qtc_Invoice_Active_OSA</label>
    <nameField>
        <label>T_qtc_Invoice_Active_OSA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_Invoice_Active_OSA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>