force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/fields/Due_DateReceive_By__c.field-meta.xml
<CustomField>
    <fullName>Due_DateReceive_By__c</fullName>
    <label>Due Date/Receive By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>