force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>