force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/fields/Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_ID__c</fullName>
    <label>Internal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>