force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/fields/Inv_Line_amount__c.field-meta.xml
<CustomField>
    <fullName>Inv_Line_amount__c</fullName>
    <label>Inv Line amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>