force-app/main/default/objects/T_qtc_Invoice_Active_OSA__c/fields/ProServSoftware__c.field-meta.xml
<CustomField>
    <fullName>ProServSoftware__c</fullName>
    <label>ProServ/Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>